<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:windowBackground"
    tools:context="com.JRead.ui.ArticleSourceFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_west_24"
            android:backgroundTint="?android:windowBackground"
            android:contentDescription="@string/back"
            app:tint="?android:textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/source_setting"
            android:textSize="24sp"/>

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_playlist_add_24"
            android:backgroundTint="?android:textColor"
            android:contentDescription="@string/input_hint_rule" />

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/input_hint_name"
            android:importantForAutofill="no"
            android:inputType="textUri"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_public_24"
            android:backgroundTint="?android:textColor"
            android:contentDescription="@string/input_hint_uri" />

        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/input_hint_uri"
            android:importantForAutofill="no"
            android:inputType="textUri"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_save_alt_24"
            android:backgroundTint="?android:textColor"
            android:contentDescription="@string/input_hint_rule" />

        <EditText
            android:id="@+id/edit3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/input_hint_rule"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:imeOptions="actionDone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/source_add_manual"
            android:background="@drawable/round_shape"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"/>

        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_outline_info_30"
            android:background="@android:color/transparent"
            android:stateListAnimator="@animator/pressed_state_list_scale"
            tools:ignore="ContentDescription"/>
        <CheckBox
            android:id="@+id/checkbox_html"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/html"
            android:textColor="?android:textColor"/>
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_outline_cloud_download_24"
            android:backgroundTint="?android:textColor"
            android:contentDescription="@string/input_hint_auto" />

        <EditText
            android:id="@+id/edit4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/input_hint_auto"
            android:importantForAutofill="no"
            android:inputType="textUri"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/add_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/source_add_auto"
        android:background="@drawable/round_shape"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_add_local"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:id="@+id/add_local"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_outline_note_add_24"
            android:background="@drawable/round_shape"
            android:contentDescription="@string/source_add_local"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:tint="@color/fab_icon_text_color"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>