<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_shape">

    <TextView
        android:id="@+id/popTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:background="@drawable/popup_toolbar_shape"
        android:elevation="8dp"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/source_ensure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/source_ensure_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-8dp"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/source_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popTextView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/source_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape"
            android:text="@string/cancel"
            android:textColor="@color/fab_icon_text_color" />

        <Button
            android:id="@+id/ensure"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape"
            android:text="@string/toImport"
            android:textColor="@color/fab_icon_text_color" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
