<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context="com.JRead.ui.StartSliderFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/source_article"
            app:expandedTitleMarginStart="80dp"
            app:expandedTitleMarginBottom="50dp"
            android:layout_marginEnd="20dp"
            app:titleCollapseMode="scale"
            app:collapsedTitleGravity="end"
            android:elevation="0dp">

            <ImageView
                android:id="@+id/slider_header_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/slider_image_description" />

            <!-- 不设背景不显示上面的 title -->
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/collapse_toolbar_marginTop"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:id="@+id/slider_scroll"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_view"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <!-- android:layout_gravity="bottom" !!! -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:background="?android:windowBackground"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <TextView
            android:id="@+id/text_source_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"
            android:text="@string/source"/>

        <ImageButton
            android:id="@+id/article_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:backgroundTint="?android:textColor"
            android:stateListAnimator="@animator/pressed_state_list_scale"
            android:background="@drawable/ic_baseline_menu_book_24"
            android:contentDescription="@string/more_historical_article"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
