<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context="com.JRead.ui.StartSliderFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?android:windowBackground"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/slider_header"
            app:expandedTitleMarginStart="50dp"
            app:expandedTitleMarginBottom="40dp"
            app:titleCollapseMode="scale"
            app:collapsedTitleGravity="start"
            android:elevation="0dp"
            app:collapsedTitleTextAppearance="@style/text_collapsed"
            app:expandedTitleTextAppearance="@style/text_collapsed_expanded">

            <ImageView
                android:id="@+id/start_header_image"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/slider_image_description"
                android:scaleType="centerCrop"/>

            <!-- 不设背景不显示上面的 title -->
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/collapse_toolbar_marginTop"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:id="@+id/slider_scroll"
        android:layout_marginBottom="@dimen/start_bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_view"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <!-- android:layout_gravity="bottom" !!! -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_bottom"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="?android:windowBackground"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <ImageButton
            android:id="@+id/more_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="?android:textColor"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:background="@drawable/ic_baseline_history_edu_24"
            android:contentDescription="@string/more_historical_article"/>

        <TextView
            android:id="@+id/more_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            android:text="@string/more"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
